--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,11 +2,10 @@ FROM php:8.1-fpm
 ARG TIMEZONE
 WORKDIR /var/www
 
-#COPY wait-for-it.sh /usr/bin/wait-for-it
-#RUN chmod +x /usr/bin/wait-for-it
+COPY wait-for-it.sh /usr/bin/wait-for-it
+RUN chmod +x /usr/bin/wait-for-it
 
 COPY config/php.ini /usr/local/etc/php/conf.d/php.ini
-#COPY config/php-cli.ini /usr/local/etc/php/conf.d/php-cli.ini
 COPY config/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
 RUN apt-get update && apt-get install -y \
@@ -28,8 +27,6 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libjpeg-dev
 
-RUN echo 'alias sf="php bin/console"' >> ~/.bashrc
-
 RUN docker-php-ext-install pgsql pdo_pgsql zip gd intl opcache exif mbstring
 
 # Add xdebug
@@ -46,8 +43,12 @@ RUN ln -snf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && echo ${TIMEZONE} >
     && printf '[PHP]\ndate.timezone = "%s"\n', ${TIMEZONE} > /usr/local/etc/php/conf.d/tzone.ini \
     && "date"
 
-COPY --from=composer /usr/bin/composer /usr/bin/composer
+# Install composer and copy to usr/local/bin in order to run within the terminal
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+RUN echo 'alias sf="php bin/console"' >> ~/.bashrc
 
 # Checks weather PostgresDB is ready to use and runs symfony doctrine migrations
-#CMD composer i -o ; wait-for-it postgresDB:5432 -- php bin/console doctrine:migrations:migrate ;  php
+CMD composer i -o ; wait-for-it postgresDB:5432 -- php bin/console doctrine:migrations:migrate ; php
+
 
