--- a/src/composer.json
+++ b/src/composer.json
@@ -78,6 +78,13 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.51"
+        "hautelook/alice-bundle": "^2.12",
+        "justinrainbow/json-schema": "^5.2",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
+        "symfony/http-client": "6.3.*",
+        "symfony/maker-bundle": "^1.51",
+        "symfony/phpunit-bridge": "^6.3"
     }
 }
